.env and code update

--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
+SECRET_KEY=django-insecure-&dzi#zsb(hz6p(s#anunt&#-a%ohr2hld71*i72*^exvw-yq$y
+DEBUG=True
+ALLOWED_HOSTS=*
+
+CORS_ALLOW_ALL_ORIGINS=True
+
 DB_NAME=django_notes
 DB_USER=root
 DB_PASSWORD=Nil1998
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
